turns out minions have an alignment issue with the loading spinner

--- a/app/styles/nypr-audio-services/_listen-button.scss
+++ b/app/styles/nypr-audio-services/_listen-button.scss
@@ -102,8 +102,11 @@
 
   .listen-ui {
     transform: scale(0.8, 0.8);
-
     margin-right: 0px;
+    
+    .listen-spinner::after {
+      left: -4px;
+    }
   }
 }
 
